@@ -24,7 +24,13 @@ package io.crate.analyze.symbol;
 import com.google.common.collect.Lists;
 import io.crate.Streamer;
 import io.crate.analyze.symbol.format.SymbolPrinter;
-import io.crate.metadata.*;
+import io.crate.metadata.ColumnIdent;
+import io.crate.metadata.GeneratedReference;
+import io.crate.metadata.OutputName;
+import io.crate.metadata.Path;
+import io.crate.metadata.Reference;
+import io.crate.metadata.ReplaceMode;
+import io.crate.metadata.ReplacingSymbolVisitor;
 import io.crate.types.DataType;
 import org.elasticsearch.common.io.stream.StreamInput;
 import org.elasticsearch.common.io.stream.StreamOutput;
@@ -46,7 +52,7 @@ public class Symbols {
     public static final Predicate<Symbol> IS_GENERATED_COLUMN = input -> input instanceof GeneratedReference;
     public static final UnaryOperator<Symbol> DEEP_COPY = s -> DEEP_COPY_VISITOR.process(s, null);
 
-    public static List<DataType> extractTypes(List<? extends Symbol> symbols) {
+    public static List<DataType> typeView(List<? extends Symbol> symbols) {
         return Lists.transform(symbols, Symbol::valueType);
     }
 
