@@ -27,7 +27,7 @@ import io.crate.action.sql.ResultReceiver;
 import io.crate.action.sql.SQLOperations;
 import io.crate.action.sql.SessionContext;
 import io.crate.analyze.symbol.Field;
-import io.crate.analyze.symbol.Symbols;
+import io.crate.collections.Lists2;
 import io.crate.http.netty.CrateNettyHttpServerTransport;
 import io.crate.operation.auth.Authentication;
 import io.crate.operation.auth.AuthenticationMethod;
@@ -621,7 +621,12 @@ class ConnectionContext {
                 session.execute("", 0, rowCountReceiver);
             } else {
                 Messages.sendRowDescription(channel, fields, null);
-                ResultSetReceiver resultSetReceiver = new ResultSetReceiver(query, channel, Symbols.extractTypes(fields), null);
+                ResultSetReceiver resultSetReceiver = new ResultSetReceiver(
+                    query,
+                    channel,
+                    Lists2.copyAndReplace(fields, Field::valueType),
+                    null
+                );
                 session.execute("", 0, resultSetReceiver);
             }
             ReadyForQueryCallback readyForQueryCallback = new ReadyForQueryCallback(channel);
