@@ -103,7 +103,7 @@ public class RestActionReceiversTest extends CrateUnitTest {
             newChannel(),
             fields,
             0L,
-            new RowAccounting(Symbols.extractTypes(fields), new RamAccountingContext("dummy", new NoopCircuitBreaker("dummy"))),
+            new RowAccounting(Symbols.typeView(fields), new RamAccountingContext("dummy", new NoopCircuitBreaker("dummy"))),
             true
         );
         for (Row row : rows) {
